# Heart-Disease-Prediction-Using-Deep-Learning-Techniques

./: .breakpoints  README.md  app.py  heart_disease_model.joblib  model.py  pyproject.toml  scaler.joblib
static/: styles.css
templates/: index.html  signup.html
